syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/thiri-lwin/thiri-bank/pb";

message Account {
    int64 ID = 1;
    string Owner = 2;
    string Currency = 3;
    int64 Balance = 4;
    google.protobuf.Timestamp CreatedAt = 5;
}
